# rust_wasm_101

./: Cargo.toml  index.html  index.js
src/: lib.rs
