[package]
name = "rust_wasm_101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.105"
wasm-bindgen = {version="0.2.87", features=["serde_json"]}
